[main]安全対策でgitignoreを追加しておく

--- a/.gitignore
+++ b/.gitignore
@@ -213,4 +213,26 @@ node_modules/
 .DS_Store
 
 # Windows
-Thumbs.db 
+Thumbs.db
+
+# Secrets / credentials (important for public repos)
+.env.*
+!.env.example
+!.env.sample
+!.env.template
+
+*.pem
+*.key
+*.p12
+*.pfx
+*.jks
+*.keystore
+
+.npmrc
+.yarnrc.yml
+
+# SSH / cloud credentials
+.ssh/
+.aws/
+.azure/
+.gcp/
